--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "dotenv": "^16.3.2",
     "express": "^4.18.2",
     "http-errors": "^2.0.0",
+    "joi": "^17.12.0",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.1.0",
     "morgan": "^1.10.0",
     "nodemon": "^3.0.3"
